welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:8: error: type mismatch;
 found   : Unit
 required: Int
	var newX:Int = ()
                       ^ColumnByColumn:13: error: Boolean does not take parameters
  while (!estPositionFinale()) {
                           ^